--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,11 @@
-ollama
-chromadb
-langchain
-langchain-core
-langchain-ollama
-langchain-community
-langchain_text_splitters
-llama-index
-langchain-chroma
-fastembed
-pikepdf
-sentence-transformers
-elevenlabs
-mcp
-streamlit
-python-dotenv
-nest-asyncio
-typing-extensions
+docx==0.2.4
+langchain==0.3.27
+langchain_core==0.3.72
+langchain_openai==0.3.28
+langgraph==0.6.3
+mcp==1.12.3
+nest_asyncio==1.6.0
+openai==1.98.0
+python-dotenv==1.1.1
+streamlit==1.47.1
+typing_extensions==4.14.1
