--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-docx==0.2.4
+python-docx==1.1.2
 langchain==0.3.27
 langchain_core==0.3.72
 langchain_openai==0.3.28
@@ -9,3 +9,5 @@ openai==1.98.0
 python-dotenv==1.1.1
 streamlit==1.47.1
 typing_extensions==4.14.1
+chromadb==0.6.1
+langchain-community==0.3.27
