--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 python-docx==1.1.2
-langchain==0.3.27
-langchain_core==0.3.72
-langchain_openai==0.3.28
-langgraph==0.6.3
+langchain==1.0.0
+langchain_core==1.0.0
+langchain_openai==1.0.0
+langgraph==1.0.0
 mcp==1.12.3
 nest_asyncio==1.6.0
-openai==1.98.0
+openai==2.5.0
 python-dotenv==1.1.1
 streamlit==1.47.1
 typing_extensions==4.14.1
-chromadb==0.6.1
-langchain-community==0.3.27
+chromadb==1.2.0
+langchain-community==0.4
+langchain-chroma==1.0.0
